--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,435 @@
-.App {
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
+  font-family: 'Mooli', sans-serif;
+}
+html {
+  scroll-behavior: smooth;
+}
+.Home{
+  padding-top: 100px;
+  margin-top:70px;
+  /* background-image: url('https://plus.unsplash.com/premium_photo-1673278063834-c982ebab2e75?auto=format&fit=crop&q=80&w=2940&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
+  /* background: radial-gradient(#8eecf5,#cfbaf0,#a3c4f3,#90dbf4); */
+  /* background-image: url('https://www.pixground.com/wp-content/uploads/2023/05/Blue-Abstract-Gradient-Digital-Art-4K-Wallpaper.jpg'); */
+/* background-image: url("https://wallpapers.com/images/hd/low-poly-blue-background-5o6wzulr6o47bk0a.jpg"); */
+background-image: url("https://cdn.wallpapersafari.com/34/73/ZKY4rG.jpg");
+/* background-image: url("https://img.freepik.com/premium-photo/light-blue-background-hd-wallpaper-3d-geometric-pattern_1000823-2294.jpg"); */
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 5px;
+  line-height: 1.9;
+  padding-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.Home h4 span {
+  color: #072ac8;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
+.Home h4 .UXBracket {
+font-style: italic;
+} 
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex{
   display: flex;
-  flex-direction: column;
+  
+}
+
+.ProfileImage >img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 10%;
+  max-height: 1%;
+  border-radius: 2% 20% 2% 20%;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
+}
+
+/*********** About_me ***********/
+
+.AboutMe{
+  padding: 10px;
+  padding-top: 40px;
+  text-align: start;
+  margin-top:50px;
+  line-height: 1.7;
+  background-image: url('https://static.vecteezy.com/system/resources/previews/004/243/021/original/abstract-template-background-white-and-bright-blue-squares-overlapping-with-halftone-and-texture-free-vector.jpg');
+
+  /* background-image: url('https://images5.alphacoders.com/132/1323475.png'); */
+  /* background-image: url("https://images3.alphacoders.com/132/1323474.png"); */
+  /* background-image: url('https://images.unsplash.com/photo-1501630834273-4b5604d2ee31?auto=format&fit=crop&q=80&w=2940&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;}
+  .AboutMe .ULtag{
+  list-style-type: none;
+}
+
+/*********** Nav ***********/
+.Nav {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  gap: 60px;
+  padding: 15px;
+  font-size: 1.3em;
+  background: rgba(235, 223, 255, 0.173);
+  backdrop-filter: blur(10px);
+  border-bottom: 2px solid rgba(255, 255, 255, .2);
+}
+.Nav a {
+  text-decoration: none;
+  color: #072ac8;
+  font-weight: bolder;
+  float: right;
+}
+
+.Nav a:hover{
+  color: rgb(159, 140, 251);
+  background-color: transparent;
+  text-decoration: underline;
+}
+.Nav a:active {
+  color: rgba(154, 26, 246, 0.82);
+  background-color: transparent;
+  text-decoration: underline;
+}
+/*********** Certifications ***********/
+.Certifications{
+  padding:20px;
+  padding-top: 30px;
+  margin-top: 70px;
+  /* margin-left: 20px; */
+  text-align:left ;
+  line-height: 2;
+  background-image: url('https://static.vecteezy.com/system/resources/previews/004/243/021/original/abstract-template-background-white-and-bright-blue-squares-overlapping-with-halftone-and-texture-free-vector.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.Certifications .ULtag {
+  margin-left: 20px;
+  text-align: start;
+  list-style-type: none;
+  
+}
+.Certifications b{
+  font-size: medium;
+  color: #072ac8;
+}
+
+/*********** Education ***********/
+.Education{
+line-height: 0.7;
+}
+/*********** Work Exp ***********/
+.WorkExp{
+  line-height: 1;
+}
+.WorkExp h5{
+  font-size: medium;
+}
+.WorkExp p{
+  font-size: 0.3 rem;
+}
+.WorkExp .WorkExpContent h4, h5{
+  line-height: 0.1;
+  margin-left: 20px;
+ font-weight: bolder;
+}
+.WorkExpContent{
+  color: #072ac8;
+}
+
+.button {
+  all: unset;
+  width: 100px;
+  height: 20px;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  /* position: relative; */
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-top: 10px;
+}
+
+.button::after,
+.button::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
+}
+
+.button::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: #4545e5;
+  border-radius: 10px;
+}
+
+.button::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.button:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.button:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.button:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
+
+/*********** Contactme ***********/
+
+.Contactme{
+  padding:10px;
+  padding-top: 10px;
+  margin-top: 70px;
+  /* margin-left: 20px; */
+  text-align:left ;
+  line-height: 1.3rem;
+  background-image: url("https://img.freepik.com/premium-photo/3d-colorful-abstract-wallpaper_692702-9798.jpg");
   color: white;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-link {
-  color: #61dafb;
+.Contactme a:visited{
+  color: rgb(252, 252, 252);
+  background-color: transparent;
+}
+.Contactme a:hover{
+  color: rgb(255, 173, 202);
+  background-color: transparent;
+  text-decoration: underline;
+}
+.Contactme a:active {
+  color: rgba(229, 63, 63, 0.82);
+  background-color: transparent;
+  text-decoration: underline;
+}
+.Contactme .ULtag{
+  list-style-type: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*********** Projects ***********/
+.Projects{
+  padding:10px;
+  padding-top: 40px;
+  margin-top: 70px;
+  /* margin-left: 20px; */
+  text-align:left ;
+  line-height: 1.3rem;
+  background-image: url("https://files.123freevectors.com/wp-content/original/106590-blue-and-white-abstract.jpg");
+ 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+.Projects .ULtag{
+  list-style-type: none;
+}
+.Projects a:visited{
+  color:#072ac8;
+  background-color: transparent;
+  text-decoration: none;
+}
+.Projects a:hover{
+  color: #8338ec;
+  background-color: transparent;
+  text-decoration: underline;
+}
+.Projects a:active {
+  color: rgba(63, 23, 243, 0.82);
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+
+  @media (max-width: 600px) {
+    #root {
+      max-width: 100%; /* Adjust the maximum width as needed for small screens */
+      padding: 1rem; /* Adjust the padding for small screens */
+    }
+    .Nav {
+      display: flex;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      gap: 15px;
+      padding: 5px;
+      margin: 5px;
+      font-size: 0.7em;
+      background: rgba(235, 223, 255, 0.173);
+      backdrop-filter: blur(10px);
+      border-bottom: 2px solid rgba(255, 255, 255, .2);
+    }
+    .Nav a {
+      text-decoration: none;
+      color: #072ac8;
+      font-weight: bolder;
+    }
+ 
+   html {
+    font-size: small;
+  }
+  h2{
+    font-size: medium
+  }
+  .AboutMe{
+    line-height: 1 em;
+  }
+  .Education article{
+    line-height:  1.2em ;
+  }
+  .WorkExp article{
+    line-height: 1.2em;
+  }
+ .Certifications{
+  line-height: 1 em;
+ }
+ .Certifications b{
+  font-size: small;
+  text-align:left ;
+ }
+
+ .ProfileImage >img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 20%;
+  max-height: 1%;
+  border-radius: 2% 20% 2% 20%;
+}
+
+.button {
+  all: unset;
+  width: 50px;
+  height: 10px;
+  font-size: 8px;
+  background: transparent;
+  border: none;
+  /* position: relative; */
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-top: 10px;
+}
+
+.button::after,
+.button::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
+}
+
+.button::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: #4545e5;
+  border-radius: 10px;
+}
+
+.button::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.button:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.button:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.button:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
+
+  }
+
+
+
+
+
+
+
+
